add tests, refactor code

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "jest"
   },
   "dependencies": {
     "apicache": "^1.4.0",
@@ -14,5 +15,11 @@
     "express": "~4.16.0",
     "express-cache-controller": "^1.1.0",
     "morgan": "~1.9.0"
+  },
+  "devDependencies": {
+    "eslint": "5.10.0",
+    "eslint-config-airbnb-base": "13.1.0",
+    "eslint-plugin-import": "2.14.0",
+    "jest": "^23.6.0"
   }
 }
